--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,9 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap");
 @import "tailwindcss";
+
+body {
+  font-family: "Poppins";
+}
 
 .parallax-image {
   @apply absolute top-0 left-0 w-full h-full object-cover pointer-events-none;
